# PrettyMapsManager

./: .gitignore  README.md  commands.txt  generate_textures.py  prettymaps_manager.toml  pyproject.toml
ingest_scripts/: ingest_mapnik.lua  ingest_topo.lua  post_ingest_mapnik.sql  post_ingest_topo.sql  rebuild_topo_db.sh
src/prettymaps_manager_app/: __init__.py  command_runner.py  config.py  main.py  map_bridge.py  models.py
src/prettymaps_manager_app/tools/: __init__.py  generate_buildings_glb.py  render_mapnik_layers.py
src/prettymaps_manager_app/ui/: __init__.py  main_window.py  project_panel.py
src/prettymaps_manager_app/web/: map.html
src/prettymaps_manager_app/workflows/: __init__.py  buildings.py  elevation.py  map_render.py
