[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "prettymapsmanager"
version = "0.1.0"
description = "GUI workflows for map selection, terrain processing, and OSM-derived outputs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mapbox-earcut>=1.0.3",
    "numpy>=2.2.0",
    "psycopg2-binary>=2.9.10",
    "pygltflib>=1.16.5",
    "pyproj>=3.7.2",
    "PySide6>=6.8.0",
]

[project.scripts]
prettymaps-gui = "prettymaps_manager_app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/prettymaps_manager_app"]

[tool.hatch.build.targets.wheel.force-include]
"src/prettymaps_manager_app/web/map.html" = "prettymaps_manager_app/web/map.html"
